attempt to fix ticket: DT-1062, feature issue on Firefox

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -473,6 +473,11 @@ footer .footer-profile {
 	Feature 
 	======= */
 
+.feature-content {
+    float: left;
+    width: 100%;
+}
+
 .widget.feature .feature-bgimg .content {
 	vertical-align: bottom;
 }
